<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="160sp">

        <TextView
            android:id="@+id/course_name_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8sp"
            android:text="@string/course_title"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toEndOf="@id/course_name_header"
            app:layout_constraintTop_toTopOf="@id/course_name_header" />

        <TextView
            android:id="@+id/course_average_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:padding="8sp"
            android:text="@string/average_grade"
            app:layout_constraintStart_toStartOf="@id/course_name_header"
            app:layout_constraintTop_toBottomOf="@id/course_name_header" />

        <TextView
            android:id="@+id/course_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            app:layout_constraintStart_toEndOf="@id/course_average_header"
            app:layout_constraintTop_toTopOf="@id/course_average_header" />

        <TextView
            android:id="@+id/average_to_pass_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:padding="8sp"
            android:text="@string/additional_average_grade_needed"
            app:layout_constraintStart_toStartOf="@id/course_average_header"
            app:layout_constraintTop_toBottomOf="@id/course_average_header" />

        <TextView
            android:id="@+id/average_to_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            app:layout_constraintStart_toEndOf="@id/average_to_pass_header"
            app:layout_constraintTop_toTopOf="@id/average_to_pass_header" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
