<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the grade tracker -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="trackerFragment"
            type="com.example.gradecalculator.TrackerFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/vertical_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </FrameLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18sp"
            android:layout_marginBottom="18sp"
            android:onClick="@{() -> trackerFragment.launchAdd()}"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:text="@string/add_a_course"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_menu_add" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>